--- a/roles/docker_compose.ci_cd_lab/templates/app.py.j2
+++ b/roles/docker_compose.ci_cd_lab/templates/app.py.j2
@@ -4,7 +4,7 @@ import redis
 from flask import Flask
 
 app = Flask(__name__)
-cache = redis.Redis(host='redis', port=6379)
+cache = redis.Redis(host='{{ app_redis_app_name }}', port={{ app_redis_app_port }})
 
 def {{ hit_count }}():
     retries = 5
@@ -19,5 +19,5 @@ def {{ hit_count }}():
 
 @app.route('/')
 def hello():
-    count = {{ hit_count }}()
-    return '{{ hello }}! I have been seen {} times.\n'.format(count)
+    count = get_hit_count()
+    return '{{ app_hello }}'.format(count)
